Changed image links

--- a/GGPlot/Lessons/00-00 Introduction and Syllabus.html
+++ b/GGPlot/Lessons/00-00 Introduction and Syllabus.html
@@ -3,7 +3,13 @@
 <head>
 	<title></title>
 	<meta charset="UTF-8"/>
-	<script src="https://cdn.jsdelivr.net/gh/QFCatMSU/OnlineClassBackEnd/module.js">
+	<noscript>
+		<link rel="stylesheet" href="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/editor.css" type="text/css" />
+	</noscript>
+	<script>
+		var scriptFile = document.createElement('script');
+		scriptFile.src = "/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/module.js";
+		document.getElementsByTagName('head')[0].appendChild(scriptFile);
 	</script>
 </head>
 
@@ -23,7 +29,7 @@
 <li>belinsky@msu.edu</li>
 <li>989-272-2623<br /><br /></li>
 </ul>
-<p><strong><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/belinsky2.JPG" alt="" title="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" width="" height="200" /></strong></p>
+<p><strong><img src="../Images/belinsky2.JPG" alt="" title="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" width="" height="200" /></strong></p>
 <p><strong></strong></p>
 <p><strong>About me...</strong></p>
 <p>I started my career as a Software Engineer for Motorola in Arizona where I developed software for military radios. From there I became a high school teacher in Port Huron, MI where I taught Computer Science, Web Design, and Physical Science. After that, I worked as an Instructional Designer for the College of Education at MSU where my main project was developing the hybrid graduate program. I currently work at the QFC where my primary job is developing online classes, including this one.&nbsp; In my free time you will often find me with a backpack deep in a forest or, as my picture testifies to, hanging out on a mountain in the Northern Cascades.</p>
@@ -48,7 +54,7 @@
 <p></p>
 <p><em class="hl">To test your hardware in Zoom</em>, open Zoom and make sure you are on the <em><strong>Home</strong> </em>tab and click the <em><strong>Settings Icon</strong> </em>(right side- <em class="ref" id="r-zoom">fig ##</em>) and the <strong>Settings </strong>Window will open (right side- <em class="ref" id="r-zoom">fig ##</em>).&nbsp; Go to the <em><strong>Audio</strong> </em>and <em><strong>Video</strong> </em>tabs to test your microphone, speakers, and webcam.&nbsp; If you are using a Mac, the view is different but the buttons are the same.</p>
 <p></p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/R-00-Zoom.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
+<p><img src="../Images/R-00-Zoom.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
 <h5 class="" id="zoom">Testing the audio and video in Zoom (click on picture to resize).</h5>
 <h3>Accessing the class</h3>
 <p>You need an MSU ID or an MSU Guest ID to access the class. You can <a href="https://community.idm.msu.edu/" target="_blank" rel="noopener">get an MSU Guest ID here</a>.&nbsp; The Guest ID is the same as the email you used to get it.</p>
@@ -87,7 +93,7 @@
 <h3>Resizing Pictures</h3>
 <p>Most pictures in the course can be resized so that the picture is out of your way when you don't need to view it.&nbsp; Clicking on the picture toggles it between the minimized and maximized states (<em class="ref" id="r-resizeImg">fig ##</em>).</p>
 <p></p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/NinhBinh%20(Large).jpg" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
+<p><img src="../Images/NinhBinh%20(Large).jpg" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
 <h5 class="" id="resizeImg">Test picture to toggle (Ninh B&igrave;nh, Việt Nam)</h5>
 <h3>Figures and references</h3>
 <p>When you click on a figure reference, the caption on the figure will highlight for 2 seconds.&nbsp; If the figure is not on the screen, then the page will scroll to the figure and highlight it.&nbsp; For instance, clicking on <em class="ref" id="r-zoom">fig ##</em> will take you to the Zoom figure near the top of this page.</p>
@@ -98,7 +104,7 @@
 <h4>Print-to-PDF Software</h4>
 <p>If you are using Windows 7 or 8 you might not have a PDF device and you will need to download <em><strong>Print-to-PDF</strong> </em>software. You can see if you have a PDF device by going to the print options in any program and see if any of the devices have "PDF" in their name (<em class="ref" id="r-pdf">fig ##</em>).&nbsp; If you don't have a PDF device, then I recommend you install&nbsp;<a href="http://www.cutepdf.com/products/cutepdf/writer.asp" target="_blank" rel="noopener noreferrer">CutePDF </a>(direct link to the <a href="http://cutepdf.com/download/CuteWriter.exe" target="_blank" rel="noopener noreferrer">file download</a>).&nbsp; CutePDF is simple print-to-PDF software that does not try to install any extra software on your computer. <em class="ref" id="r-offers">Trap: Bloatware<br /></em></p>
 <p></p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/R-00-PDFPrinter.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
+<p><img src="../Images/R-00-PDFPrinter.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
 <h5 class="" id="pdf">This author has two print-to-PDF devices -- the Microsoft Print to PDF, which comes with Windows 10, works fine</h5>
 <h3>Long-click menu</h3>
 <p>If you long-click (hold left-button for about half a second) anywhere on any lesson page (<em class="ref" id="r-ff">fig ##, </em>try it!), you are given options to:</p>
@@ -113,7 +119,7 @@
 <p></p>
 <p>In Firefox, the options above are also included in the right-click menu.</p>
 <p></p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/R-00-LongClickMenu.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
+<p><img src="../Images/R-00-LongClickMenu.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
 <h5 id="ff">The long-click menu -- this view is from Firefox .</h5>
 <h3>Codeblocks</h3>
 <p>Double-clicking on a codeblock will select all the text in the codeblock and copy it to the clipboard -- you can then paste it into RStudio (or any other text editor).&nbsp;</p>
@@ -163,7 +169,7 @@
 <h2 class="trap" id="offers">Trap: Bloatware</h2>
 <p>Adobe Acrobat, like most free software you download, attempts to bundle itself with software you most likely do not need nor want (i.e., bloatware).&nbsp; Make sure you take some time to read the optional offers whenever you download software. This author would argue that the main reason computers "slow" down over time is because of extra software that users unwittingly install.</p>
 <p></p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-GRaphingwithGGPlot/GGPlot/Lessons/../Images/R-00-Bloatware.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
+<p><img src="../Images/R-00-Bloatware.PNG" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs" /></p>
 <h5>Three offers from Adobe that you neither need nor want -- this author recommends you uncheck them all.</h5>
 <h2 class="extension" id="test">Extension: Testing the extension link.</h2>
 <p>Hi, and welcome to the test <em><strong>Extension</strong></em>.&nbsp; If you clicked on the <em><strong>Extension</strong> </em>link to get here then you can return to your previous location by long-clicking on this page and choosing <em><strong>Go to Previous Location</strong></em>.</p>
