--- a/GGPlot/Lessons/IntroAndSyllabus-Summer.html
+++ b/GGPlot/Lessons/IntroAndSyllabus-Summer.html
@@ -9,7 +9,7 @@
 
 <body>
 <p class="nextLesson"></p>
-<p class="nextLesson"></p>
+	<p class="nextLesson"></p>
 <h1 class="title" id="title">Graphing with GGPlot Introduction and Syllabus</h1>
 <h2>Welcome to Graphing with GGPlot</h2>
 <p>The main purpose of this class is to learn how to create robust plots in R using GGPlot. GGPlot is a widely used R package that adopts a modern approach to graphing that makes plots more extensible and reusable and it also has one of the largest, and most active, R communities. The class will also focus on good programming practices and include a variety of topics concerning plotting in R including but not limited to pattern recognition (grep), RGB color codes and Unicode characters, gradients, and quantiles.</p>
@@ -24,7 +24,7 @@
 <p></p>
 <p><a href="https://qfcatmsu.github.io/GGPlot/Lessons/01-02%20Components.html" target="_blank" rel="noopener">Here is a sample lesson from the course.</a></p>
 <h3>Grading</h3>
-<p>The class is graded as a Pass/Fail class.&nbsp; The two criteria for evaluation is class participation and the <a href="https://github.com/QFCatMSU/GGPlot-Class-Material/raw/master/Class%20Project%20Rubric.docx" target="_blank" rel="noopener">class project</a>.</p>
+<p>The class is graded under the Pass-No Grade system.&nbsp; The two criteria for evaluation is class participation and the <a href="https://github.com/QFCatMSU/GGPlot-Class-Material/raw/master/Class%20Project%20Rubric.docx" target="_blank" rel="noopener">class project</a>.</p>
 <h2>Instructor</h2>
 <p><strong>Charlie Belinsky&nbsp;&nbsp;&nbsp;&nbsp;</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 <ul>
