--- a/GGPlot/Lessons/IntroAndSyllabus-Summer.html
+++ b/GGPlot/Lessons/IntroAndSyllabus-Summer.html
@@ -16,7 +16,7 @@
 <p></p>
 <p>This is a 1-credit class and the expectation is that you will spend about 60 hours overall on the class -- this time includes the class meetings.</p>
 <h3>Class Times</h3>
-<p>The course will be held online using Zoom for 2 hours per week for 7 weeks between June 29th - August 13th. The exact day and time of the meeting will be voted on by the enrollees. You will need a laptop with the newest versions of R (3.6+ or 4.0+) and RStudio (1.2+).</p>
+	<p>The course will be held online using Zoom every <b>Monday from 3-5pm EST</b> for 7 weeks. The first class is June 29, the last class is August 10. You will need a laptop with the newest versions of R (3.6+ or 4.0+) and RStudio (1.2+).</p>
 <h3>Prerequisites</h3>
 <p>This class is designed for students that have some programming experience, whether in R or another language (e.g., Python, JavaScript, C++). The experience needed is about the equivalent of one semester of programming &ndash; or an understanding of functions, if-else statements, and for loops.</p>
 <h3>Material</h3>
