--- a/GGPlot/Lessons/IntroAndSyllabus-Summer.html
+++ b/GGPlot/Lessons/IntroAndSyllabus-Summer.html
@@ -20,7 +20,7 @@
 <h3>Prerequisites</h3>
 <p>This class is designed for students that have some programming experience, whether in R or another language (e.g., Python, JavaScript, C++). The experience needed is about the equivalent of one semester of programming &ndash; or an understanding of functions, if-else statements, and for loops.</p>
 <h3>Material</h3>
-<p>All material for this course is wither in D2L or GitHub -- no textbooks are required.</p>
+<p>All material for this course is either in D2L or GitHub -- no textbooks are required.</p>
 <p></p>
 <p><a href="https://qfcatmsu.github.io/GGPlot/Lessons/01-02%20Components.html" target="_blank" rel="noopener">Here is a sample lesson from the course.</a></p>
 <h3>Grading</h3>
@@ -114,7 +114,7 @@
 <h3>Printing lessons and saving lessons to PDF</h3>
 <p>You can print any lesson or save it as a PDF by clicking on the <em><strong>Printer</strong> icon</em> at the top of every lesson (and this syllabus).&nbsp; This will bring up a print dialog (<em class="ref" id="r-pdf">fig ##</em>) and you can print the lesson to a printer.&nbsp; On most machines, you can also choose a PDF device as a printer -- this will save the lesson as a PDF document.&nbsp;</p>
 <p></p>
-<p class="note">Note: Using your browser's print feature instead on the <em><strong>Print</strong> </em>link will print out the whole webpage instead of just the lesson.</p>
+<p class="note">Note: Using your browser's print feature instead of the <em><strong>Print</strong> </em>link will print out the whole webpage instead of just the lesson.</p>
 <h4>Print-to-PDF Software</h4>
 <p>If you are using Windows 7 or 8 you might not have a PDF device and you will need to download <em><strong>Print-to-PDF</strong> </em>software. You can see if you have a PDF device by going to the print options in any program and see if any of the devices have "PDF" in their name (<em class="ref" id="r-pdf">fig ##</em>).&nbsp; If you don't have a PDF device, then I recommend you install&nbsp;<a href="http://www.cutepdf.com/products/cutepdf/writer.asp" target="_blank" rel="noopener noreferrer">CutePDF </a>(direct link to the <a href="http://cutepdf.com/download/CuteWriter.exe" target="_blank" rel="noopener noreferrer">file download</a>).&nbsp; CutePDF is simple print-to-PDF software that does not try to install any extra software on your computer. <em class="ref" id="r-offers">Trap: Bloatware<br /></em></p>
 <p></p>
