--- a/R/Lessons/00-00 Introduction and Syllabus.html
+++ b/R/Lessons/00-00 Introduction and Syllabus.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title></title>
+		<title></title>
 	<meta charset="UTF-8"/>
-	<noscript>
-		<link rel="stylesheet" href="/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/editor.css" type="text/css" />
-	</noscript>
-	<script>
-const D2LMathML="";
-		var scriptFile = document.createElement('script');
-		scriptFile.src = "/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/module.js";
-		document.getElementsByTagName('head')[0].appendChild(scriptFile);
+	<script src="https://cdn.jsdelivr.net/gh/QFCatMSU/OnlineClassBackEnd/module.js">
 	</script>
 </head>
 <body>
