--- a/R/Lessons/03-04 t-tests and ANOVAS.html
+++ b/R/Lessons/03-04 t-tests and ANOVAS.html
@@ -3,14 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="UTF-8"/>
-	<noscript>
-		<link rel="stylesheet" href="/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/editor.css" type="text/css" />
-	</noscript>
-	<script>
-const D2LMathML="";
-		var scriptFile = document.createElement('script');
-		scriptFile.src = "/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/Programming/Release/module.js";
-		document.getElementsByTagName('head')[0].appendChild(scriptFile);
+	<script src="https://cdn.jsdelivr.net/gh/QFCatMSU/OnlineClassBackEnd/module.js">
 	</script>
 </head>
 
