Switch image locations from D2L to local

--- a/ADMB-TMB Installation.html
+++ b/ADMB-TMB Installation.html
@@ -1,8 +1,8 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 	
 	<meta charset="UTF-8">
 	<script type="text/javascript"> document.write('<'+'!--'); </script>
-       <link rel="stylesheet" type="text/css" href="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/../Programming/Release/editor.css">
+       <link rel="stylesheet" type="text/css" href="../Programming/Release/editor.css">
     <!-- -->
 	<script src="https://cdn.jsdelivr.net/gh/QFCatMSU/OnlineClassBackEnd/module.js">
 	</script>
@@ -53,11 +53,11 @@
 <p></p>
 <p>1) Open a File Explorer window and in...</p>
 <p><strong>&nbsp;&nbsp;&nbsp; Windows 10</strong>: Click <b><i>View</i></b> -&gt; <b><i>Options</i></b> -&gt; <b><i>Change folder and search options</i></b></p>
-<p><b><i>&nbsp;&nbsp;&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-Windows10FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></i></b></p>
+<p><b><i>&nbsp;&nbsp;&nbsp; <img src="Images/A-T-Windows10FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></i></b></p>
 <p class="fig">Accessing folder options in Windows 10</p>
 <p><strong></strong></p>
 <p><strong>&nbsp;&nbsp;&nbsp; Windows 11</strong>: click 3 dots <b>( … ) </b>-&gt;<b> <i>Options</i></b></p>
-<p>&nbsp; &nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-Windows11FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; &nbsp; <img src="Images/A-T-Windows11FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Accessing folder options in Windows 11</p>
 <p></p>
 <p>2) Both <strong>Windows 10 </strong>and <strong>11</strong>:</p>
@@ -71,7 +71,7 @@
 </ul>
 </li>
 </ul>
-<p>&nbsp;&nbsp;&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp;&nbsp;&nbsp; <img src="Images/A-T-FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Showing hidden files and hiding extensions</p>
 <h2>Software Installation</h2>
 <p class="hl">You can use the default installation options for all applications.</p>
@@ -204,7 +204,7 @@
 </li>
 <li>If the Emacs panels look like this after <b><i>Run,</i></b> then ADMB is properly installed:</li>
 </ul>
-<p>&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-ADMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; <img src="Images/A-T-ADMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Translate, Build, and Run buttons in ADMB.&nbsp; This view is from ADMB 12.3 -- the view from 13.0 is a bit different</p>
 <h2>Testing out TMB</h2>
 <ul>
@@ -220,7 +220,7 @@
 </li>
 <li>If the Emacs panels look like this after <b><i>Run,</i></b> then TMB is properly installed:</li>
 </ul>
-<p>&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-TMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; <img src="Images/A-T-TMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Clean, Compile, and Run buttons in TMB</p>
 <h2>Appendix 1: manually copy configuration files and admb2r.cpp</h2>
 <p><em><strong>PATH.bat</strong></em> is a batch that copies the emacs configuration files and <em><strong>admb2r.cpp</strong></em> to the correct locations.</p>
@@ -230,7 +230,7 @@
 <p>Inside <b><i>ADMB-TMB-Install-main</i></b>, there is a folder named <b><i>emacsConfigFiles</i></b>.&nbsp; You need to copy the contents inside the <em><strong>emacsConfigFiles </strong></em>folder (a file named <b><i>.emacs</i></b> and a folder named <b><i>emacs</i></b>) to the user’s <b><i>appdata</i></b> folder.</p>
 <p>&nbsp;</p>
 <p>The easiest way to get to the user's <b><i>appdata</i></b> folder is to type <b>%appdata%</b> in a File Explorer window and hit enter.&nbsp; Or, you can go directly to the folder:<em><strong> C:\Users\&lt;yourUserName&gt;\AppData\Roaming</strong></em>.&nbsp; Move both the <em><strong>emacs </strong></em>folder and <em><strong>.emacs</strong></em> file to this folder:</p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-CopyFileMAnually.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p><img src="Images/A-T-CopyFileMAnually.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Location to copy the emacs configuration files</p>
 <h3>Copy admb2r.cpp</h3>
 <p>The file <em><strong>admb2r.cpp</strong></em> is used in ADMB scripts but it does not come with ADMB.&nbsp;</p>
