Message to resize image

--- a/Sim/Lessons/Introduction.html
+++ b/Sim/Lessons/Introduction.html
@@ -29,7 +29,7 @@
 <p class="fs"><span style="font-size: 12pt;"><strong>Video 1: Introduction to the course</strong></span></p>
 <p></p>
 <p><img src="../Images/CourseStructure_by_Unit.jpg" alt="" style="max-width: 100%;" data-d2l-editor-default-img-style="true" class="fs"></p>
-<p class="fig">&nbsp;Overview of the elements of the course</p>
+<p class="fig">&nbsp;Overview of the elements of the course (click to enlarge)</p>
 <h2>What this course is not about.</h2>
 <p>This is not a general systems modeling course. If you get a textbook on modeling, even one specifically on ecological modeling, from the nearest university library, you will find its contents to be different from the content of this course. Of course there will be overlap, but there will be lots of topics covered in the textbook that we won't be covering here. <em class="hl">Our focus will be on management of fish and wildlife populations</em>, and there are topics covered in modeling texts that aren't especially relevant to our focus - for example biogeochemical cycling of nutrients.&nbsp; We will be focusing on what you need to know to build a model that can be used in the "consequences" phase of a decision making process, where the decisions being made are about the management of a fish or wildlife population.&nbsp;</p>
 <h2>What background do you need?</h2>
