Fixed image  links

--- a/ADMB-TMB Installation.html
+++ b/ADMB-TMB Installation.html
@@ -54,11 +54,11 @@
 <p></p>
 <p>1) Open a File Explorer window and in...</p>
 <p><strong>&nbsp;&nbsp;&nbsp; Windows 10</strong>: Click <b><i>View</i></b> ➔ <b><i>Options</i></b> ➔&nbsp;<b><i>Change folder and search options</i></b></p>
-<p><b><i>&nbsp;&nbsp;&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-Windows10FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></i></b></p>
+<p><b><i>&nbsp;&nbsp;&nbsp; <img src="Images/A-T-Windows10FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></i></b></p>
 <p class="fig">Accessing folder options in Windows 10</p>
 <p><strong></strong></p>
 <p><strong>&nbsp;&nbsp;&nbsp; Windows 11</strong>: click 3 dots <b>( … ) ➔&nbsp;</b><b><i>Options</i></b></p>
-<p>&nbsp; &nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-Windows11FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; &nbsp; <img src="Images/A-T-Windows11FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Accessing folder options in Windows 11</p>
 <p></p>
 <p>2) Both <strong>Windows 10 </strong>and <strong>11</strong>:</p>
@@ -72,7 +72,7 @@
 </ul>
 </li>
 </ul>
-<p>&nbsp;&nbsp;&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp;&nbsp;&nbsp; <img src="Images/A-T-FolderOptions.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Showing hidden files and hiding extensions</p>
 <h2>Software Installation</h2>
 <p class="hl">You can use the default installation options for all applications.</p>
@@ -203,7 +203,7 @@
 </li>
 <li>If the Emacs panels look like this after <b><i>Run,</i></b> then ADMB is properly installed:</li>
 </ul>
-<p>&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-ADMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; <img src="Images/A-T-ADMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Translate, Build, and Run buttons in ADMB.&nbsp; This view is from ADMB 12.3 -- the view from 13.1 is slightly different</p>
 <h2>Testing out TMB</h2>
 <ul>
@@ -219,7 +219,7 @@
 </li>
 <li>If the Emacs panels look like this after <b><i>Run,</i></b> then TMB is properly installed:</li>
 </ul>
-<p>&nbsp; <img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-TMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p>&nbsp; <img src="Images/A-T-TMBTest.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Clean, Compile, and Run buttons in TMB</p>
 <p></p>
 <h3>Package inconsistency error</h3>
@@ -237,11 +237,11 @@
 <p>You can see the User Environment PATH by doing a Windows search for <em><strong>Environment </strong></em>and choosing <em><strong>Edit the system environment variables</strong></em>.</p>
 <p></p>
 <p>That will open the <em><strong>System Properties</strong></em> window on the <em><strong>Advanced </strong></em>tab-- click on the <em><strong>Environment... </strong></em>button:</p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/AT_SystemProp.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p><img src="Images/AT_SystemProp.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">The Advanced System Properties tab</p>
 <p></p>
 <p>Then double-click on <em><strong>Path </strong></em>in the <em><strong>User variables </strong></em>section:</p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/EnvironmentVars.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p><img src="Images/EnvironmentVars.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Path variables</p>
 <p></p>
 <p>Delete any references to older versions of ADMB, TMB, or ADStudio.&nbsp; You can also safely delete the references to the current ADMB version -- they are not needed.</p>
@@ -265,7 +265,7 @@
 <p>Inside <b><i>ADMB-TMB-Install-main</i></b>, there is a folder named <b><i>emacsConfigFiles</i></b>.&nbsp; You need to copy the contents inside the <em><strong>emacsConfigFiles </strong></em>folder (a file named <b><i>.emacs</i></b> and a folder named <b><i>emacs</i></b>) to the user’s <b><i>appdata</i></b> folder.</p>
 <p>&nbsp;</p>
 <p>The easiest way to get to the user's <b><i>appdata</i></b> folder is to type <b>%appdata%</b> in a File Explorer window and hit enter.&nbsp; Or, you can go directly to the folder:<em><strong> C:\Users\&lt;yourUserName&gt;\AppData\Roaming</strong></em>.&nbsp; Move both the <em><strong>emacs </strong></em>folder and <em><strong>.emacs</strong></em> file to this folder:</p>
-<p><img src="https://d2l.msu.edu/content/DEVELOPMENT/2018/courses/DEV-belinsky-2018-BackendTest/ADMB-TMB-Install/Images/A-T-CopyFileManually.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
+<p><img src="Images/A-T-CopyFileManually.png" alt="" data-d2l-editor-default-img-style="true" style="max-width: 100%;" class="fs"></p>
 <p class="fig">Location to copy the emacs configuration files</p>
 <h3>Copy admb2r.cpp</h3>
 <p>The file <em><strong>admb2r.cpp</strong></em> is used in ADMB scripts but it does not come with ADMB.&nbsp;</p>
